--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://rohans540.github.io/tech-innovators",
-  "name": "neurawave",
+  "name": "tech-innovators",
   "private": true,
   "version": "0.0.0",
   "type": "module",
